<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_init">Choise your Activity</string>
    <string name="message_activity">Send a Message</string>
    <string name="lenguaje_activity">Chouse a Lenguaje</string>
    <string name="title_activity_lenguaje">Lenguaje Activity</string>
    <string name="title_activity_toast">Toast Activity</string>
    <string name="simple_toast">Simple Toast</string>
    <string name="toast_activity">Toast Activity</string>
    <string name="gravity_toast">Gravity Toast</string>
    <string name="title_activity_life_cycle">Life Cycle</string>
    <string name="title_activity_built_app">Built App</string>
    <string name="browser">Browser</string>
    <string name="make_call">Make Call</string>
    <string name="notification">Notification</string>
    <string name="title_activity_notification">Notification Activity</string>
    <string name="big_text">Big Text</string>
    <string name="big_picture">Big Picture</string>
    <string name="in_box">In Box</string>
    <string name="noti_botones">Buttons</string>
    <string name="title_activity_select_buttons">Select Buttons</string>
    <string name="selection_buttons">Selection Buttons</string>
    <string name="title_activity_time_picker">Time Picker</string>
    <string name="title_activity_simple_list">Simple List</string>
    
    <string-array name="array_object">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

</resources>
