<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.InitActivity"
    android:background="@drawable/background3">
    
     

    <Button
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/message_activity" 
        android:onClick="callMainActivity"/>

    <Button
        android:id="@+id/lenguaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/message"
        android:text="@string/lenguaje_activity" 
        android:onClick="callLenguajeActivity"/>
    
    <Button
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lenguaje"
        android:text="@string/toast_activity" 
        android:onClick="callToastActivity"/>
    
     <Button
        android:id="@+id/lifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toast"
        android:text="@string/title_activity_life_cycle" 
        android:onClick="callLifeCycleActivity"/>
     
     <Button
        android:id="@+id/built"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lifecycle"
        android:text="@string/title_activity_built_app" 
        android:onClick="callBuiltActivity"/>
     
     <Button
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/built"
        android:text="@string/notification" 
        android:onClick="callNotification"/>
     
     <Button
        android:id="@+id/selection_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/notification"
        android:text="@string/selection_buttons" 
        android:onClick="callSelectBtns"/>
     
     <Button
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/selection_buttons"
        android:text="@string/title_activity_time_picker" 
        android:onClick="callTimePicker"/>
     
     <Button
        android:id="@+id/simple_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_picker"
        android:text="@string/title_activity_simple_list" 
        android:onClick="callSimpleList"/>

</RelativeLayout>
